RESOLVED FIXED70098
[TexMap][QT] The BGRA32PremultimpliedBuffer should not inherit the RefCounted class.
https://bugs.webkit.org/show_bug.cgi?id=70098
Summary [TexMap][QT] The BGRA32PremultimpliedBuffer should not inherit the RefCounted...
Dongseong Hwang
Reported 2011-10-14 04:54:26 PDT
TextureMapperGL has BGRA32PremultimpliedBuffer using OwnPtr, not PefPtr. It causes following assertion fail, RefCountedBase::m_deletionHasBegun.
Attachments
patch (3.46 KB, patch)
2011-10-14 04:59 PDT, Dongseong Hwang
noam: review-
noam: commit-queue-
patch (2.42 KB, patch)
2011-10-17 09:04 PDT, Dongseong Hwang
no flags
Dongseong Hwang
Comment 1 2011-10-14 04:59:22 PDT
Noam Rosenthal
Comment 2 2011-10-14 07:45:14 PDT
Comment on attachment 110994 [details] patch I understand the problem, but I believe that this is not the right solution. The right solution would be to make it not RefCounted, unless you have reasons otherwise.
Dongseong Hwang
Comment 3 2011-10-17 09:04:56 PDT
Created attachment 111271 [details] patch I agree with you.
WebKit Review Bot
Comment 4 2011-10-17 09:08:11 PDT
Attachment 111271 [details] did not pass style-queue: Failed to run "['Tools/Scripts/update-webkit', '--chromium']" exit_code: 2 Updating OpenSource Current branch master is up to date. Updating chromium port dependencies using gclient... Error: Can't switch the checkout to http://v8.googlecode.com/svn/branches/3.6@9637; UUID don't match and there is local changes in /mnt/git/webkit-style-queue/Source/WebKit/chromium/v8. Delete the directory and try again. Re-trying 'depot_tools/gclient sync' Error: Can't switch the checkout to http://v8.googlecode.com/svn/branches/3.6@9637; UUID don't match and there is local changes in /mnt/git/webkit-style-queue/Source/WebKit/chromium/v8. Delete the directory and try again. Re-trying 'depot_tools/gclient sync' Error: Can't switch the checkout to http://v8.googlecode.com/svn/branches/3.6@9637; UUID don't match and there is local changes in /mnt/git/webkit-style-queue/Source/WebKit/chromium/v8. Delete the directory and try again. Error: 'depot_tools/gclient sync' failed 3 tries and returned 256 at Tools/Scripts/update-webkit-chromium line 107. Re-trying 'depot_tools/gclient sync' No such file or directory at Tools/Scripts/update-webkit line 104. If any of these errors are false positives, please file a bug against check-webkit-style.
Dongseong Hwang
Comment 5 2011-10-17 16:21:25 PDT
I've checked 'check-webkit-style'. Why does Chromium bot fail style test?
Noam Rosenthal
Comment 6 2011-10-17 17:11:56 PDT
(In reply to comment #5) > I've checked 'check-webkit-style'. > Why does Chromium bot fail style test? flaky bots. ignore...
WebKit Review Bot
Comment 7 2011-10-17 19:24:38 PDT
Comment on attachment 111271 [details] patch Clearing flags on attachment: 111271 Committed r97703: <http://trac.webkit.org/changeset/97703>
WebKit Review Bot
Comment 8 2011-10-17 19:24:42 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.