[TexMap][QT] The BGRA32PremultimpliedBuffer should not inherit the RefCounted class. https://bugs.webkit.org/show_bug.cgi?id=70098

The BitmapTexture has a BGRA32PremultimpliedBuffer object using OwnPtr, not RefPtr.
It causes following assertion fail, RefCountedBase::m_deletionHasBegun.
It is better that the BGRA32PremultimpliedBuffer does not inherit the RefCounted
because the BitmapTexture only has and uses a BGRA32PremultimpliedBuffer object.

Patch by Huang Dongsung <luxtella@company100.net> on 2011-10-17
Reviewed by Noam Rosenthal.

* platform/graphics/opengl/TextureMapperGL.h:

Canonical link: https://commits.webkit.org/86424@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@97703 268f45cc-cd09-0410-ab3c-d52691b4dbfc